<!-- Copyright (C) 2016 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>
    <!-- Title for the application. [CHAR LIMIT=12] -->
    <string name="app_name">Miwok</string>
    <!-- Category name for the vocabulary words for numbers [CHAR LIMIT=20] -->
    <string name="category_numbers">Numbers</string>

    <!-- Category name for the vocabulary words for family members [CHAR LIMIT=20] -->
    <string name="category_family">Family Members</string>

    <!-- Category name for phrases [CHAR LIMIT=20] -->
    <string name="category_phrases">Phrases</string>

    <!-- Category name for the vocabulary words for colors [CHAR LIMIT=20] -->
    <string name="category_colors">Colors</string>

    <!-- Category name for the vocabulary words for numbers [CHAR LIMIT=20] -->
    <string name="numbers"><font size="14">Numbers</font></string>

    <!-- Category name for the vocabulary words for family members [CHAR LIMIT=20] -->
    <string name="family"><font size="14">Family Members</font></string>
    <!-- Category name for phrases [CHAR LIMIT=20] -->
    <string name="phrases"><font size="14">Phrases</font></string>

    <!-- Category name for the vocabulary words for colors [CHAR LIMIT=20] -->
    <string name="colors"><font size="13">Colors</font></string>

<string name="about_miwok">The Miwok or Miwokan languages
            , also known as Moquelumnan, are a group of endangered languages spoken in central California
            in the Sierra Nevada.There are five somewhat diverse Miwok languages, two of which have
            distinct regional dialects (Sierra Miwok and Coast Miwok).
            There are a few dozen speakers of the three Sierra Miwok languages,
             and in 1994 there were two speakers of Lake Miwok. The best attested language is Southern
    Sierra Miwok, from which the name Yosemite originates.</string>
</resources>